<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentBooking"
    android:background="@drawable/malibu_beach_background">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/download__1_" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:text="@string/heading_one" />

        <TextView
            android:id="@+id/header_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/heading_two" />

        <TextView
            android:id="@+id/text_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_body"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:padding="17dp"
            android:textColor="@color/black"
            android:text="@string/text_from" />

        <TextView
            android:id="@+id/text_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_to"
            android:layout_below="@+id/text_from"
            android:padding="17dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            />

        <TextView

            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:layout_below="@+id/text_to"
            android:padding="17dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:layout_below="@+id/text_time"
            android:padding="17dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            />

        <!--<EditText
            android:id="@+id/editFrom"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_body"
            android:layout_alignStart="@id/text_from"
            android:layout_marginStart="81dp"
            android:layout_marginTop="49dp"
            android:inputType="textCapWords"
            android:hint="@string/check_campus"
            android:maxLength="20"
            android:minHeight="48dp"
            android:padding="8dp" />-->


        <!--<EditText
            android:id="@+id/editTo"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editFrom"
            android:layout_alignStart="@id/text_to"
            android:layout_marginStart="81dp"
            android:layout_marginTop="40dp"
            android:hint="@string/check_res"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:minHeight="48dp"
            android:padding="8dp" />-->

        <!--<EditText
            android:id="@+id/editTime"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTo"
            android:layout_alignStart="@id/text_to"
            android:layout_marginStart="81dp"
            android:layout_marginTop="40dp"
            android:hint="@string/check_time"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            android:maxLength="5"
            android:minHeight="48dp"
            android:padding="8dp" />-->

        <!--<EditText
            android:id="@+id/editDate"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTime"
            android:layout_alignStart="@id/text_date"
            android:layout_marginStart="81dp"
            android:layout_marginTop="40dp"
            android:inputType="textCapWords"
            android:hint="@string/check_date"
            android:maxLength="10"
            android:minHeight="48dp"
            android:padding="8dp" />-->

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="149dp"
            android:layout_marginBottom="2dp"
            android:text="@string/proceed_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83">

        </Button>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="637dp"
            android:text="BACK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83">

        </Button>

        <Button
            android:id="@+id/button_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="Next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83">


        </Button>

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="229dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="368dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="290dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="233dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="447dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerDate"
            android:layout_width="231dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="518dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>